--- a/src/assets/login.css
+++ b/src/assets/login.css
@@ -43,6 +43,10 @@ form h2 {
     margin: 10px 0;
 }
 
+form label h3{
+    font-weight: 400;
+}
+
 input {
     width: 100%;
     padding: 5px 10px;
@@ -51,4 +55,19 @@ input {
     border: 1px solid #000;
     font-size: 17px;
 
+}
+
+@media screen and (max-width: 600px)  {
+    form {
+        width: 70%;
+        margin: 30px auto;
+        padding: 15px 20px;
+        border: 2px solid #00f;
+    }
+}
+
+@media screen and (max-width: 860px)  {
+    form {
+        width: 60%;
+    }
 }
